@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180223"
-#define public MagickPackageReleaseDate "snapshot-20180223"
+#define public MagickPackageVersionAddendum ".020180224"
+#define public MagickPackageReleaseDate "snapshot-20180224"
